<resources>
    <string name="app_name">RRSolucoesHotel</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="acessar">Acessar</string>
    <string name="sair">Sair</string>
    <string name="servicos">Serviços</string>
    <string name="restaurante">Restaurante</string>
    <string name="piscina">Piscina</string>
    <string name="salaoF">Salão de Festas</string>
    <string name="salaoJ">Salão de Jogos</string>
    <string name="spa">SPA</string>
    <string name="turismo">Turismo</string>
    <string name="consultar">Consultar Gastos</string>
    <string name="despesas">Despesas</string>
    <string name="iconeHotel">Hotel</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>