<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".FormLogin">

        <ImageView
            android:id="@+id/logoLogin"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/containerLogin"
            style="@style/ContainerComponent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoLogin" />

        <EditText
            android:id="@+id/txtEmailLogin"
            style="@style/Edit_Text"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/containerLogin"
            app:layout_constraintStart_toStartOf="@id/containerLogin"
            app:layout_constraintTop_toTopOf="@id/containerLogin" />

        <EditText
            android:id="@+id/txtSenhaLogin"
            style="@style/Edit_Text"
            android:drawableEnd="@drawable/ic_eye"
            android:hint="@string/senha"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            app:layout_constraintEnd_toEndOf="@id/containerLogin"
            app:layout_constraintStart_toStartOf="@id/containerLogin"
            app:layout_constraintTop_toBottomOf="@id/txtEmailLogin" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAcessarLogin"
            style="@style/Button"
            android:text="@string/acessar"
            app:layout_constraintEnd_toEndOf="@id/containerLogin"
            app:layout_constraintStart_toStartOf="@id/containerLogin"
            app:layout_constraintTop_toBottomOf="@id/txtSenhaLogin" />

        <ProgressBar
            android:id="@+id/progressBarLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerLogin" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSairLogin"
            style="@style/ButtonSair"
            android:text="@string/sair"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressBarLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>