<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".activities.LoginActivity">

        <!--ImageView
            android:id="@+id/logoLogin"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            app:srcCompat="bota a imagem do logo aqui"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" /-->

        <!--substitui app:layout_constraintTop_toTopOf="parent"
        por app:layout_constraintTop_toBottomOf="logoLogin"-->

        <View
            android:id="@+id/containerLogin"
            style="@style/ContainerComponent"
            android:layout_width="371dp"
            android:layout_height="253dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.824" />

        <EditText
            android:id="@+id/txtSenhaLogin"
            style="@style/Edit_Text"
            android:layout_marginBottom="100dp"
            android:drawableEnd="@drawable/ic_eye"
            android:hint="@string/senha"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:maxLength="11"
            app:layout_constraintBottom_toBottomOf="@+id/containerLogin"
            app:layout_constraintEnd_toEndOf="@+id/containerLogin"
            app:layout_constraintStart_toStartOf="@+id/containerLogin"
            app:layout_constraintTop_toBottomOf="@+id/txtEmailLogin"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/txtEmailLogin"
            style="@style/Edit_Text"
            android:layout_marginBottom="174dp"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            app:layout_constraintBottom_toBottomOf="@+id/containerLogin"
            app:layout_constraintEnd_toEndOf="@+id/containerLogin"
            app:layout_constraintStart_toStartOf="@+id/containerLogin"
            app:layout_constraintTop_toTopOf="@+id/containerLogin"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAcessarLogin"
            style="@style/Button"
            android:text="@string/acessar"
            app:layout_constraintBottom_toBottomOf="@+id/containerLogin"
            app:layout_constraintEnd_toEndOf="@+id/containerLogin"
            app:layout_constraintHorizontal_bias="0.275"
            app:layout_constraintStart_toStartOf="@+id/containerLogin"
            app:layout_constraintTop_toTopOf="@+id/containerLogin"
            app:layout_constraintVertical_bias="0.91" />

        <ProgressBar
            android:id="@+id/progressBarLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/teal_700"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.431" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="203dp"
            android:layout_height="318dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logotipo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>